plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    
    // Apply the Shadow plugin for creating a fat JAR
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}
applicationDefaultJvmArgs = ["--add-opens=java.base/java.nio.charset=ALL-UNNAMED"]
repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'com.google.protobuf:protobuf-java:3.25.6'
    implementation 'com.google.protobuf:protobuf-java-util:3.25.6'
    implementation 'org.lmdbjava:lmdbjava:0.9.1'
       // https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni
implementation 'org.rocksdb:rocksdbjni:7.9.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}

// Configure the Shadow plugin
tasks.named('shadowJar') {
    archiveBaseName.set('java-mmaped-proto-cache')
    archiveClassifier.set('')
    archiveVersion.set('1.0.0')
}

// Set the default JAR task to use the fat JAR
tasks.named('build') {
    dependsOn tasks.named('shadowJar')
}